--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,8 @@
 Flask-SQLAlchemy==2.4.1
-SQLAlchemy==1.3.15
+sqlalchemy==1.3.15
 PyYAML==5.3.1
 Flask==1.1.1
-pymysql==0.9.3
+pymysql==1.0.2
 pytest==5.4.2
 boto3==1.17.57
 pandas==1.1.4
