--- a/requirements.txt
+++ b/requirements.txt
@@ -4,7 +4,13 @@ Flask==1.1.1
 pymysql==1.0.2
 pytest==5.4.2
 boto3==1.17.57
-pandas==1.1.4
+pandas==1.1.5
 botocore~=1.20.49
 requests~=2.25.1
 
+
+joblib~=1.0.1
+numpy~=1.19.4
+scikit-learn~=0.24.2
+matplotlib~=3.3.3
+PyYAML~=5.4.1
