--- a/copilot/app/manifest.yml
+++ b/copilot/app/manifest.yml
@@ -39,5 +39,5 @@ exec: true     # Enable running commands in your container.
 
 # You can override any of the values defined above by environment.
 #environments:
-#  test:
-#    count: 2               # Number of tasks to run for the "test" environment.
+#  tests:
+#    count: 2               # Number of tasks to run for the "tests" environment.
